--- a/q/274322.html
+++ b/q/274322.html
@@ -26,10 +26,28 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>086</td><td>R</td><td>240722T132927Z</td><td><a href="https://codegolf.stackexchange.com/questions/274322/braille-based-base64/274327#274327">Dominic </a></td></tr>
-<tr d-ix="1"><td>139</td><td>Python 3.8 prerelease</td><td>240722T121011Z</td><td><a href="https://codegolf.stackexchange.com/questions/274322/braille-based-base64/274324#274324">squarero</a></td></tr>
+<tr d-ix="0"><td>049</td><td>Jelly</td><td>240722T180217Z</td><td><a href="https://codegolf.stackexchange.com/questions/274322/braille-based-base64/274333#274333">Jonathan</a></td></tr>
+<tr d-ix="1"><td>086</td><td>R</td><td>240722T132927Z</td><td><a href="https://codegolf.stackexchange.com/questions/274322/braille-based-base64/274327#274327">Dominic </a></td></tr>
+<tr d-ix="2"><td>139</td><td>Python 3.8 prerelease</td><td>240722T121011Z</td><td><a href="https://codegolf.stackexchange.com/questions/274322/braille-based-base64/274324#274324">squarero</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>95</s> 86 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 49 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<p><sup>I'm not fully convinced I cannot do better somehow...</sup></p>
+<pre><code>Øb“¡¡5tḳ&gt;⁹Iŀḟ⁴!³ç×,¬dñ¬wC#+4Æ@⁽ÇṄȦḄṁ£Ụ£ẆĊ’œ?i+⁽$ṁ
+</code></pre>
+<p>A monadic Link that accepts a character and yields a Unicode codepoint.</p>
+<p><strong><a href="https://tio.run/##AXUAiv9qZWxsef//w5hi4oCcwqHCoTV04bizPuKBuUnFgOG4n@KBtCHCs8Onw5cswqxkw7HCrHdDIys0w4ZA4oG9w4fhuYTIpuG4hOG5gcKj4bukwqPhuobEiuKAmcWTP2kr4oG9JOG5gf/Dh@G7jCn//yJiMi9CKyI" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong> (runs for each character, casts to the output to the braille character.)<br />
+Or see the <a href="https://tio.run/##AcIAPf9qZWxsef//w5hi4oCcwqHCoTV04bizPuKBuUnFgOG4n@KBtCHCs8Onw5cswqxkw7HCrHdDIys0w4ZA4oG9w4fhuYTIpuG4hOG5gcKj4bukwqPhuobEiuKAmcWTP2kr4oG9JOG5gf8sw4fhu4w7JCRGakDigqwzwqbDmChLKVn//yIwMTIzNDU2Nzg5YWJjZGVmZ2hpamtsbW5vcHFyc3R1dnd4eXovQUJDREVGR0hJSktMTU5PUFFSU1RVVldYWVorIg" rel="nofollow noreferrer" title="Jelly – Try It Online">test-suite</a>. (Casts to the output to the braille character, return value shown in parentheses.)</p>
+<h4>How?</h4>
+<pre><code>Øb“...’œ?i+⁽$ṁ - Link: character, C
+Øb             - base-64 characters -&gt; &quot;AB...Zab...z+/&quot;
+  “...’        - large base 250 compressed number
+       œ?      - permutation of {&quot;AB...Zab...z+/&quot;} at {that} lexicographic index
+         i     - index of {C} in {that}
+           ⁽$ṁ - 10240
+          +    - {foundAt} add {10240}
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>95</s> 86 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>function(x)unique(c(utf8ToInt(&quot;W%)5UE9YI7$&amp;,&lt;4.&gt;6-=(*0@82B:1AHJ]P`X&quot;),36:99))[x]+10205
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72waMGGpMTiVDOTkHynosTMnJxU26WlJWm6FjfD0krzkksy8_M0KjRL8zILS1M1kjWAUhYh-Z55JRpK4aqapqGulpGe5ipqOjYmenZmurYaWgYOFkZOVoaOHl6xAQkRSpo6xmZWlpaamtEVsdqGBkYGplDTdysrpGSmZ5YUK3AVJBaXpGoYWFnqZOaVhOSHAq3QQHOThqGVoYGmToimJpeyQk5qSUlqUTFUH5SHT6-hlbEZTHN-SQZCb7KGj2tIiGtQsI6StpKOkj7QubiNMTa3MjMBGwPxwoIFEBoA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -44,7 +62,7 @@
 <p>Tries to take advantage of the pattern <code>[2,6,16,-8,-6,16,-8,-9]</code> that is repeated 3 times (first repeat is doubled) in the differences between consecutive <code>0-9a-z</code> codepoints.<br />
 <s>I doubt that this will actually end-up the shortest approach, though</s>.  It didn't.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 139 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 139 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda x:x.translate(''.join(chr(i+10208)for i in b'NOPQSWXY[\\^~~~~~~!#)91+;3*:%\'-=5/?7.&gt;EGZM]U_~~~,T&quot;&amp;2RB6VF4~~~~~~~ $(08&lt;@ACDHIJKL'*2))
 </code></pre>
