--- a/q/274322.html
+++ b/q/274322.html
@@ -35,8 +35,8 @@
 <pre><code>Øb“¡¡5tḳ&gt;⁹Iŀḟ⁴!³ç×,¬dñ¬wC#+4Æ@⁽ÇṄȦḄṁ£Ụ£ẆĊ’œ?i+⁽$ṁ
 </code></pre>
 <p>A monadic Link that accepts a character and yields a Unicode codepoint.</p>
-<p><strong><a href="https://tio.run/##AXUAiv9qZWxsef//w5hi4oCcwqHCoTV04bizPuKBuUnFgOG4n@KBtCHCs8Onw5cswqxkw7HCrHdDIys0w4ZA4oG9w4fhuYTIpuG4hOG5gcKj4bukwqPhuobEiuKAmcWTP2kr4oG9JOG5gf/Dh@G7jCn//yJiMi9CKyI" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong> (runs for each character, casts to the output to the braille character.)<br />
-Or see the <a href="https://tio.run/##AcIAPf9qZWxsef//w5hi4oCcwqHCoTV04bizPuKBuUnFgOG4n@KBtCHCs8Onw5cswqxkw7HCrHdDIys0w4ZA4oG9w4fhuYTIpuG4hOG5gcKj4bukwqPhuobEiuKAmcWTP2kr4oG9JOG5gf8sw4fhu4w7JCRGakDigqwzwqbDmChLKVn//yIwMTIzNDU2Nzg5YWJjZGVmZ2hpamtsbW5vcHFyc3R1dnd4eXovQUJDREVGR0hJSktMTU5PUFFSU1RVVldYWVorIg" rel="nofollow noreferrer" title="Jelly – Try It Online">test-suite</a>. (Casts to the output to the braille character, return value shown in parentheses.)</p>
+<p><strong><a href="https://tio.run/##AXUAiv9qZWxsef//w5hi4oCcwqHCoTV04bizPuKBuUnFgOG4n@KBtCHCs8Onw5cswqxkw7HCrHdDIys0w4ZA4oG9w4fhuYTIpuG4hOG5gcKj4bukwqPhuobEiuKAmcWTP2kr4oG9JOG5gf/Dh@G7jCn//yJiMi9CKyI" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong> (applies the Link to each character and casts the output to characters.)<br />
+Or see the <a href="https://tio.run/##AcIAPf9qZWxsef//w5hi4oCcwqHCoTV04bizPuKBuUnFgOG4n@KBtCHCs8Onw5cswqxkw7HCrHdDIys0w4ZA4oG9w4fhuYTIpuG4hOG5gcKj4bukwqPhuobEiuKAmcWTP2kr4oG9JOG5gf8sw4fhu4w7JCRGakDigqwzwqbDmChLKVn//yIwMTIzNDU2Nzg5YWJjZGVmZ2hpamtsbW5vcHFyc3R1dnd4eXovQUJDREVGR0hJSktMTU5PUFFSU1RVVldYWVorIg" rel="nofollow noreferrer" title="Jelly – Try It Online">test-suite</a>. (Casts the output of each input character to a character; the actual return value is shown in parentheses.)</p>
 <h4>How?</h4>
 <pre><code>Øb“...’œ?i+⁽$ṁ - Link: character, C
 Øb             - base-64 characters -&gt; &quot;AB...Zab...z+/&quot;
