--- a/q/274322.html
+++ b/q/274322.html
@@ -26,24 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>105</td><td>JavaScript Node.js</td><td>240722T131407Z</td><td><a href="https://codegolf.stackexchange.com/questions/274322/braille-based-base64/274326#274326">Arnauld</a></td></tr>
-<tr d-ix="1"><td>049</td><td>Jelly</td><td>240722T180217Z</td><td><a href="https://codegolf.stackexchange.com/questions/274322/braille-based-base64/274333#274333">Jonathan</a></td></tr>
-<tr d-ix="2"><td>086</td><td>R</td><td>240722T132927Z</td><td><a href="https://codegolf.stackexchange.com/questions/274322/braille-based-base64/274327#274327">Dominic </a></td></tr>
-<tr d-ix="3"><td>139</td><td>Python 3.8 prerelease</td><td>240722T121011Z</td><td><a href="https://codegolf.stackexchange.com/questions/274322/braille-based-base64/274324#274324">squarero</a></td></tr>
+<tr d-ix="0"><td>049</td><td>Jelly</td><td>240722T180217Z</td><td><a href="https://codegolf.stackexchange.com/questions/274322/braille-based-base64/274333#274333">Jonathan</a></td></tr>
+<tr d-ix="1"><td>083</td><td>Python 3.8 prerelease</td><td>240723T004621Z</td><td><a href="https://codegolf.stackexchange.com/questions/274322/braille-based-base64/274335#274335">Jonathan</a></td></tr>
+<tr d-ix="2"><td>105</td><td>JavaScript Node.js</td><td>240722T131407Z</td><td><a href="https://codegolf.stackexchange.com/questions/274322/braille-based-base64/274326#274326">Arnauld</a></td></tr>
+<tr d-ix="3"><td>086</td><td>R</td><td>240722T132927Z</td><td><a href="https://codegolf.stackexchange.com/questions/274322/braille-based-base64/274327#274327">Dominic </a></td></tr>
+<tr d-ix="4"><td>139</td><td>Python 3.8 prerelease</td><td>240722T121011Z</td><td><a href="https://codegolf.stackexchange.com/questions/274322/braille-based-base64/274324#274324">squarero</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 105 bytes</h1>
-
-<pre class="lang-javascript prettyprint-override"><code>c=&gt;Buffer([226,160,&quot;Aa1bBk2lCcif/mspDe3h9o6rEdjgFntqGH5IJu8vKLMNOxPQRS4T0z7UVWwXYyZ+&quot;.indexOf(c)+128])+&quot;&quot;
-</code></pre>
-<p><a href="https://tio.run/##JdLLbtNAFAbgfZ7idBaNowQndhInaZSipk1vXAq0QNsoC2c8zs2xE9u5tl0AAgQUKqCAuBQQErBigwAhJF4mL8AjBJ@czeibOUdzRpq/qfd1j7uNjn/OdgwxNQtTXlgs9kxTuFJZVbWYoiVibElXqsWWai3zhhlve50VkaznHM0tGc3aqu1319bTG5u9bP/CxUuXt4ZXrl7bTu0kxpnrN24OdvdG@1EmN2xDDLdMiUeiipqtRKKMTbljez44UIADYDpbADb5eIvFgFXJd9Cc/ABtkF@jBfkp2iQ/CgysRpu3WKiTn6Mb5IfoJvkNukW@i7bI99Ft8mO0TT5DO@QX6A75BN0lf0C75Fdoj/wE7ZPfo3vkz@g@@St6QP6DHpK/oUfkv@gx@Sc6Qf6BVsi30Sr5HjpJfoZOkb@j0@RPaI38Ep0h/0JnyV/QOfIpOk4@ZnCUD4Us4UPPE0bwmbYYwLbwg8OyLMtsqbi8UlpdW9/YnKUDw7ETBGN3b1@vckOYtXqj2bLattPpup7f6w@Go3FCUZOptJbJ5uJRVpFNxy3pvC5xKCzCQQgAp7nCC4ZhovLBCWbJsYRsOTWJx7AYA2nOKfMKHB5SbwFwG4H5eZjDp8p13ZOCSgTOQ/jf75PJu9NgDcMChCdnx@HZtbM@3TBmffnQUWT6Hw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 49 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
-<p><sup>I'm not fully convinced I cannot do better somehow...</sup></p>
+<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 49 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>Øb“¡¡5tḳ&gt;⁹Iŀḟ⁴!³ç×,¬dñ¬wC#+4Æ@⁽ÇṄȦḄṁ£Ụ£ẆĊ’œ?i+⁽$ṁ
 </code></pre>
 <p>A monadic Link that accepts a character and yields a Unicode codepoint.</p>
-<p><strong><a href="https://tio.run/##AXUAiv9qZWxsef//w5hi4oCcwqHCoTV04bizPuKBuUnFgOG4n@KBtCHCs8Onw5cswqxkw7HCrHdDIys0w4ZA4oG9w4fhuYTIpuG4hOG5gcKj4bukwqPhuobEiuKAmcWTP2kr4oG9JOG5gf/Dh@G7jCn//yJiMi9CKyI" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong> (applies the Link to each character and casts the output to characters.)<br />
-Or see the <a href="https://tio.run/##AcIAPf9qZWxsef//w5hi4oCcwqHCoTV04bizPuKBuUnFgOG4n@KBtCHCs8Onw5cswqxkw7HCrHdDIys0w4ZA4oG9w4fhuYTIpuG4hOG5gcKj4bukwqPhuobEiuKAmcWTP2kr4oG9JOG5gf8sw4fhu4w7JCRGakDigqwzwqbDmChLKVn//yIwMTIzNDU2Nzg5YWJjZGVmZ2hpamtsbW5vcHFyc3R1dnd4eXovQUJDREVGR0hJSktMTU5PUFFSU1RVVldYWVorIg" rel="nofollow noreferrer" title="Jelly – Try It Online">test-suite</a>. (Casts the output of each input character to a character; the actual return value is shown in parentheses.)</p>
+<p><a href="https://tio.run/##AXUAiv9qZWxsef//w5hi4oCcwqHCoTV04bizPuKBuUnFgOG4n@KBtCHCs8Onw5cswqxkw7HCrHdDIys0w4ZA4oG9w4fhuYTIpuG4hOG5gcKj4bukwqPhuobEiuKAmcWTP2kr4oG9JOG5gf/Dh@G7jCn//yJiMi9CKyI" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a> (applies the Link to each character and casts the output to characters.)<br />
+Or see the <strong><a href="https://tio.run/##AcIAPf9qZWxsef//w5hi4oCcwqHCoTV04bizPuKBuUnFgOG4n@KBtCHCs8Onw5cswqxkw7HCrHdDIys0w4ZA4oG9w4fhuYTIpuG4hOG5gcKj4bukwqPhuobEiuKAmcWTP2kr4oG9JOG5gf8sw4fhu4w7JCRGakDigqwzwqbDmChLKVn//yIwMTIzNDU2Nzg5YWJjZGVmZ2hpamtsbW5vcHFyc3R1dnd4eXovQUJDREVGR0hJSktMTU5PUFFSU1RVVldYWVorIg" rel="nofollow noreferrer" title="Jelly – Try It Online">test-suite</a></strong>. (Casts the output of each input character to a character; the actual return value is shown in parentheses.)</p>
 <h4>How?</h4>
 <pre><code>Øb“...’œ?i+⁽$ṁ - Link: character, C
 Øb             - base-64 characters -&gt; &quot;AB...Zab...z+/&quot;
@@ -54,7 +48,27 @@ Or see the <a href="https://tio.run/##AcIAPf9qZWxsef//w5hi4oCcwqHCoTV04bizPuKBuU
           +    - {foundAt} add {10240}
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>95</s> 86 bytes</h1>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 83 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>(' '*10241+'a1bAk2lBcif/mspCe3h9o6rDdjgEntqFG5HIu8vJKLMNxOPQR4S0z7TUVwWXyYZ+').find
+</code></pre>
+<p>An unnamed function that accepts a base-64 character and returns a Unicode ordinal.</p>
+<p><strong><a href="https://tio.run/##JczLboJAGAXgfZ/iDxtmalK5qWjiwrv23lqrNW4UGBnFYRwGFQnPTkHP6uTk5OOJ9ENm2lzkpL3KkQrqo64Zll5R1/qmszeCrkNJ9RDxnmf6zbAu@u5uO2DyOBzVxpPYPj2/vL69Xz4@v76tqXZt/Mx@z/NF8resqPiJUObmJBQgvUgCZaBoumFatXrDbq43juuRrU93@@DAQn4UkYxP50tyrXa6vf5gOBpPbnZJTwt2vihQpfUARYQXxYGENhBU0vg2ckGZRERJyymD1PEFuh9xBii91wwrOP8H" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></strong></p>
+<h4>How?</h4>
+<p>The function <code>find</code> of a string will return the index of the first occurrence of the provided character (or string) or -1 if not found.</p>
+<pre class="lang-python prettyprint-override"><code>(               ).find # create a `find` function for the result of:
+ ' '                   #   a space character
+    *10241             #   repeated 10241 times
+          +'...'       #   plus the characters in the order we want them
+</code></pre>
+</div>
+<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 105 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>c=&gt;Buffer([226,160,&quot;Aa1bBk2lCcif/mspDe3h9o6rEdjgFntqGH5IJu8vKLMNOxPQRS4T0z7UVWwXYyZ+&quot;.indexOf(c)+128])+&quot;&quot;
+</code></pre>
+<p><a href="https://tio.run/##JdLLbtNAFAbgfZ7idBaNowQndhInaZSipk1vXAq0QNsoC2c8zs2xE9u5tl0AAgQUKqCAuBQQErBigwAhJF4mL8AjBJ@czeibOUdzRpq/qfd1j7uNjn/OdgwxNQtTXlgs9kxTuFJZVbWYoiVibElXqsWWai3zhhlve50VkaznHM0tGc3aqu1319bTG5u9bP/CxUuXt4ZXrl7bTu0kxpnrN24OdvdG@1EmN2xDDLdMiUeiipqtRKKMTbljez44UIADYDpbADb5eIvFgFXJd9Cc/ABtkF@jBfkp2iQ/CgysRpu3WKiTn6Mb5IfoJvkNukW@i7bI99Ft8mO0TT5DO@QX6A75BN0lf0C75Fdoj/wE7ZPfo3vkz@g@@St6QP6DHpK/oUfkv@gx@Sc6Qf6BVsi30Sr5HjpJfoZOkb@j0@RPaI38Ep0h/0JnyV/QOfIpOk4@ZnCUD4Us4UPPE0bwmbYYwLbwg8OyLMtsqbi8UlpdW9/YnKUDw7ETBGN3b1@vckOYtXqj2bLattPpup7f6w@Go3FCUZOptJbJ5uJRVpFNxy3pvC5xKCzCQQgAp7nCC4ZhovLBCWbJsYRsOTWJx7AYA2nOKfMKHB5SbwFwG4H5eZjDp8p13ZOCSgTOQ/jf75PJu9NgDcMChCdnx@HZtbM@3TBmffnQUWT6Hw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu3" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>95</s> 86 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>function(x)unique(c(utf8ToInt(&quot;W%)5UE9YI7$&amp;,&lt;4.&gt;6-=(*0@82B:1AHJ]P`X&quot;),36:99))[x]+10205
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72waMGGpMTiVDOTkHynosTMnJxU26WlJWm6FjfD0krzkksy8_M0KjRL8zILS1M1kjWAUhYh-Z55JRpK4aqapqGulpGe5ipqOjYmenZmurYaWgYOFkZOVoaOHl6xAQkRSpo6xmZWlpaamtEVsdqGBkYGplDTdysrpGSmZ5YUK3AVJBaXpGoYWFnqZOaVhOSHAq3QQHOThqGVoYGmToimJpeyQk5qSUlqUTFUH5SHT6-hlbEZTHN-SQZCb7KGj2tIiGtQsI6StpKOkj7QubiNMTa3MjMBGwPxwoIFEBoA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -69,7 +83,7 @@ Or see the <a href="https://tio.run/##AcIAPf9qZWxsef//w5hi4oCcwqHCoTV04bizPuKBuU
 <p>Tries to take advantage of the pattern <code>[2,6,16,-8,-6,16,-8,-9]</code> that is repeated 3 times (first repeat is doubled) in the differences between consecutive <code>0-9a-z</code> codepoints.<br />
 <s>I doubt that this will actually end-up the shortest approach, though</s>.  It didn't.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 139 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 139 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda x:x.translate(''.join(chr(i+10208)for i in b'NOPQSWXY[\\^~~~~~~!#)91+;3*:%\'-=5/?7.&gt;EGZM]U_~~~,T&quot;&amp;2RB6VF4~~~~~~~ $(08&lt;@ACDHIJKL'*2))
 </code></pre>
