--- a/q/259008.html
+++ b/q/259008.html
@@ -47,6 +47,12 @@
 <pre><code>cP x
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m708I7E4OzUnZ8FNxczcgvyiEoXC0sSczLTM1BSFgKLUnNKUVC6oRMDS0pI0XYubShW2BZUqFYmVSo5OSjZaFUAEYjuD2FxptskBChVQlZNyEzPzFGwVUvK5FBRy4xU0CooUbBTSNIE8BYVoBSVnJ0dHJTBHB8RxcoJznJydkWScgYbDOI7OjghlQDaSjBOyMkckjhNcJhbisgULIDQA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<h1>No parsers, 41 bytes</h1>
+<pre class="lang-haskell prettyprint-override"><code>g=no&lt;jn&lt;(lL&lt;db)&lt;&lt;ce
+</code></pre>
+<pre><code>g 'C'&lt;pxn*^*g 'B'&lt;sxn
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=TY69DoIwFIV3nuLKgqLuDmVoq5uDcTIhaNDeIloKAk14DlcXF-M7-Ca-jfgT7HTPl--c5F7u-7g6olKP0B2vZk2NWqCYooyNqpdGYeVGz16aFXlZw8nEKpUpCliUqIxA5ycWN1PL8eQ5TAKdk4MmfTUnYjsgZIeODBLwuEeKRvtrv83MI1Wjf5NzFqcaAhC5A5BtoF-UQEAOWgIIweWMUvcDozcw1gHj3DKc8g4op_9amy3D7Bq1gHUm-n52vX7vCw" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <h1>Reflection</h1>
 <ul>
 <li>There should be a shortcut for <code>cP&lt;rX</code>.</li>
