--- a/q/85141.html
+++ b/q/85141.html
@@ -118,6 +118,7 @@
 </table>
 <div id="pu0" class="pu"><h1>x86 real-mode COM file, text mode, <strike>57</strike> 56 bytes</h1>
 <p>Because text mode is 80x25, one column of the flag corresponds to two on screen. One could actually save one byte by producing the flag with the wrong aspect ratio.</p>
+<p>Another byte could be saved by using the CMOVA instruction instead of JBE+MOV at 11f/121, but I'm sticking to x86 lowest common denominator.</p>
 <p><a href="https://i.sstatic.net/jtMiyeTF.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/jtMiyeTF.png" alt="Output from FreeDOS session running in DOSBOX" /></a></p>
 <p>Use DEBUG to assemble (remove everything after the semicolon on each line; I suggest using an <code>ICELAND.SCR</code> file and running <code>DEBUG&lt;ICELAND.SCR</code>).</p>
 <pre><code>a100
