--- a/q/274322.html
+++ b/q/274322.html
@@ -41,6 +41,14 @@
 <p><a href="https://ato.pxeger.com/run?1=m72waMGGpMTiVDOTkHynosTMnJxU26WlJWm6Fjdj00rzkksy8_M0KjRL8zILS1M1kjWAUhYh-Z55JRpK-uGqmqahrpaRnuYqajo2Jnp2Zrq2GloGDhZGTlaGjh5esQEJEUqaOsZmVpaWmprRFaqqZibahrHahgZGBqZQS3YrK6RkpmeWFCtwFSQWl6RqGFhZ6mTmlYTkhwJt0kBzmoahlaGBpk6IpiaXskJOaklJalExVB-Uh0-voZWxGUxzfkkGQm-yho9rSIhrULCOkraSjpI-0NG4jTE2tzIzARsD8cKCBRAaAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Input as 1-based base64 index; output as UTF8 codepoint.</p>
 <p>Hard-codes <code>0-9a-z/</code> and assigns the remaining codpoints to <code>A-Z+</code> in order.</p>
+<hr />
+<h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 129 bytes</h1>
+<pre class="lang-r prettyprint-override"><code>function(x,d=c(2,6,16,-8,-6,16,-8,-9))(unique(c(cumsum(c(0,40,-50,2*d,-19,d,16,-21,d,16,7,2,19,-13,16,-8)),1:64))+10252)[x%%64+1]
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=fY-xTsMwEIb3PkWUqpKPnIXtpG4SqQtSNyYwU8UQEgcspQnEttSV52AJAzs7T8Lb0JIAEkOn--9036__f3nth_e7wmqZqO6iL0zT6PWbdzVNP59r35bOdC3ZY7UuiUCJXCJNkf6KDID41jx5TUpS-p31u4NgmDCkS4birELKM6y-_wUfxQoFHo6Ux6MNAPJcJgARZ2IpYLtfLGQS8dspyMc8qMy9cTaYPRbWacLyDE3rVHfj6pT8i094zhmgApjNg0Y7p3s7cdN2iuV5LH_gzj38sSW53Ci1ubrGMAoxPA_hhE28OvY52owVhmGcXw" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Input as 1-based base64 index; output as UTF8 codepoint.</p>
+<p>Tries to take advantage of the pattern <code>[2,6,16,-8,-6,16,-8,-9]</code> that is repeated 3 times (first repeat is doubled) in the differences between consecutive <code>0-9a-z</code> codepoints.<br />
+<s>I doubt that this will actually end-up the shortest approach, though</s>.  It didn't.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 78 nibbles (39 bytes)</h1>
 <pre><code>=+$~+10241`$:`D61,63  21a16719663227d2e81629f2688aedf60eab66ab1ad7d92682f8724
