--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240723T084615Z
+"   /golfscore                                      20240723T091424Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/274342.html">Simulate Text Cursor                            : 0274342</a>
 <a href="q/274322.html">Braille-based Base64                            : 0274322</a>
 <a href="q/258511.html">Longest Valid Parentheses                       : 0258511</a>
 <a href="q/85141.html">Draw the national flag of Iceland               : 0085141</a>
