--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240723T133437Z
+"   /golfscore                                      20240723T133842Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/97653.html">Approximate arcsinc                             : 0097653</a>
 <a href="q/274350.html">Golfscript whole-stack rotation                 : 0274350</a>
 <a href="q/98322.html">Ordered list of binary sequences of multiple dim: 0098322</a>
 <a href="q/274288.html">Compute Dickman                                 : 0274288</a>
