--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240723T134138Z
+"   /golfscore                                      20240723T134944Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/224823.html">Write a program with infinite expected output   : 0224823</a>
 <a href="q/263135.html">Print this diamond gone beautifully wrong       : 0263135</a>
+<a href="q/274348.html">Substring of Fizzbuzz                           : 0274348</a>
 <a href="q/97653.html">Approximate arcsinc                             : 0097653</a>
 <a href="q/274350.html">Golfscript whole-stack rotation                 : 0274350</a>
 <a href="q/98322.html">Ordered list of binary sequences of multiple dim: 0098322</a>
