--- a/q/263135.html
+++ b/q/263135.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>016</td><td>Japt R</td><td>240722T171948Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274332#274332">Shaggy</a></td></tr>
-<tr d-ix="1"><td>064</td><td>Perl 5</td><td>240722T082434Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274318#274318">Donat</a></td></tr>
+<tr d-ix="0"><td>064</td><td>Perl 5</td><td>240722T082434Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274318#274318">Donat</a></td></tr>
+<tr d-ix="1"><td>016</td><td>Japt R</td><td>240722T171948Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274332#274332">Shaggy</a></td></tr>
 <tr d-ix="2"><td>065</td><td>Perl 5</td><td>230729T070153Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/263490#263490">good old</a></td></tr>
 <tr d-ix="3"><td>045</td><td>J</td><td>230728T083545Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/263454#263454">Jonah</a></td></tr>
 <tr d-ix="4"><td>069</td><td>Ruby</td><td>230721T202643Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/263157#263157">Value In</a></td></tr>
@@ -52,7 +52,14 @@
 <tr d-ix="23"><td>156</td><td>Swift</td><td>230721T175718Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/263148#263148">Bbrk24</a></td></tr>
 <tr d-ix="24"><td>278</td><td>Vyxal</td><td>230721T162133Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/263137#263137">The Empt</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-R</code></a>, 16 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 64 bytes</h1>
+
+<pre class="lang-perl prettyprint-override"><code>$n=abs,$_=(1x(9-$n))**2,s//$&quot;x$n/ge,say$&quot;x($n-4)**2 .$_ for-8..8
+</code></pre>
+<p><a href="https://tio.run/##K0gtyjH9/18lzzYxqVhHJd5Ww7BCw1JXJU9TU0vLSKdYX19FqUIlTz89Vac4sRLI1lDJ0zUBySnoqcQrpOUX6Vro6Vn8//8vv6AkMz@v@L@ur6megaEBAA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
+<p>Based on my Perl solution for <a href="https://codegolf.stackexchange.com/a/206606/95987">Print this diamond</a>. After computing the numbers I insert the required spaces using a regex. Indentation is added in the parameter of <code>say</code>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-R</code></a>, 16 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>9
 õÈõ ê q´UçÃû ê
 </code></pre>
@@ -71,13 +78,6 @@
                 ê     :Palindromise
                       :Implicit output joined with newlines
 </code></pre>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 64 bytes</h1>
-
-<pre class="lang-perl prettyprint-override"><code>$n=abs,$_=(1x(9-$n))**2,s//$&quot;x$n/ge,say$&quot;x($n-4)**2 .$_ for-8..8
-</code></pre>
-<p><a href="https://tio.run/##K0gtyjH9/18lzzYxqVhHJd5Ww7BCw1JXJU9TU0vLSKdYX19FqUIlTz89Vac4sRLI1lDJ0zUBySnoqcQrpOUX6Vro6Vn8//8vv6AkMz@v@L@ur6megaEBAA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
-<p>Based on my Perl solution for <a href="https://codegolf.stackexchange.com/a/206606/95987">Print this diamond</a>. After computing the numbers I insert the required spaces using a regex. Indentation is added in the parameter to <code>say</code>.</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 65 bytes</h1>
 
