--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240723T134944Z
+"   /golfscore                                      20240723T135256Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/83221.html">Parity of Nth Term in Fibonacci Integer Sequence: 0083221</a>
+<a href="q/251028.html">CGCC Rocket Biking                              : 0251028</a>
 <a href="q/224823.html">Write a program with infinite expected output   : 0224823</a>
 <a href="q/263135.html">Print this diamond gone beautifully wrong       : 0263135</a>
 <a href="q/274348.html">Substring of Fizzbuzz                           : 0274348</a>
