--- a/q/274350.html
+++ b/q/274350.html
@@ -26,16 +26,16 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>006</td><td>6 bytes</td><td>240723T133437Z</td><td><a href="https://codegolf.stackexchange.com/questions/274350/golfscript-whole-stack-rotation/274353#274353">noodle p</a></td></tr>
+<tr d-ix="0"><td>010</td><td>10 bytes</td><td>240723T133437Z</td><td><a href="https://codegolf.stackexchange.com/questions/274350/golfscript-whole-stack-rotation/274353#274353">noodle p</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>6 bytes</h1>
-<pre><code>](+{}/
+<div id="pu0" class="pu"><h1>10 bytes</h1>
+<pre><code>]){(+}*{}/
 </code></pre>
-<p><a href="https://tio.run/##S8/PSStOLsosKPlvbahgpGCsYKJgqmD2P1ZDu7pW//9/AA" rel="nofollow noreferrer" title="GolfScript – Try It Online">Try it online!</a></p>
-<pre><code>]       # put the stack in an array
- (      # isolate the first item
-  +     # append that item
-   {}/  # dump the array onto the stack
+<p><a href="https://tio.run/##S8/PSStOLsosKPlvzWWoYKRgrGCiYKpgxmXyP1azWkO7Vqu6Vv//fwA" rel="nofollow noreferrer" title="GolfScript – Try It Online">Try it online!</a></p>
+<pre><code>]          # put the stack in an array
+ )         # take the last item
+  {(+}*    # that many times, move the first to the end
+       {}/ # dump the array onto the stack
 </code></pre>
 </div>
 
