--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240723T143957Z
+"   /golfscore                                      20240723T150308Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/58615.html">1 2 Fizz 4 Buzz                                 : 0058615</a>
+<a href="q/274358.html">Double dequer sort                              : 0274358</a>
 <a href="q/274350.html">Golfscript whole-stack rotation                 : 0274350</a>
 <a href="q/248690.html">Is it a valid list?                             : 0248690</a>
 <a href="q/83221.html">Parity of Nth Term in Fibonacci Integer Sequence: 0083221</a>
@@ -43,7 +45,6 @@
 <a href="q/261554.html">Split a string on unnested commas               : 0261554</a>
 <a href="q/30344.html">Testing Keyboards                               : 0030344</a>
 <a href="q/1294.html">Determine whether strings are anagrams          : 0001294</a>
-<a href="q/58615.html">1 2 Fizz 4 Buzz                                 : 0058615</a>
 <a href="q/90349.html">The Letter A without A                          : 0090349</a>
 <a href="q/114883.html">I give you Nth permutation you give me N        : 0114883</a>
 <a href="q/273940.html">Plot the ground path of a satellite             : 0273940</a>
