--- a/q/274350.html
+++ b/q/274350.html
@@ -26,14 +26,14 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>021</td><td>21 bytes</td><td>240723T163728Z</td><td><a href="https://codegolf.stackexchange.com/questions/274350/golfscript-whole-stack-rotation/274362#274362">Styleurc</a></td></tr>
+<tr d-ix="0"><td>022</td><td>22 bytes</td><td>240723T163728Z</td><td><a href="https://codegolf.stackexchange.com/questions/274350/golfscript-whole-stack-rotation/274362#274362">Styleurc</a></td></tr>
 <tr d-ix="1"><td>024</td><td>24 bytes</td><td>240723T153830Z</td><td><a href="https://codegolf.stackexchange.com/questions/274350/golfscript-whole-stack-rotation/274361#274361">ovs</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>21 bytes</h1>
+<div id="pu0" class="pu"><h1>22 bytes</h1>
 <p>I made it shorter</p>
-<pre><code>])~{1$}4*&lt;@@)&gt;+@@[=]+
+<pre><code>])~{1$}4*&lt;@@)&gt;+@@[=]+~
 </code></pre>
-<p><a href="https://tio.run/##S8/PSStOLsosKPlvraCUmJSckpqmZKhfp2CioKCskJlXUFpS/D9Ws67aUKXWRMvGwUHTTtvBIdo2Vvt/bMF/AA" rel="nofollow noreferrer" title="GolfScript – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##S8/PSStOLsosKPlvraCUmJSckpqmZKhfp2CioKCskJlXUFpS/D9Ws67aUKXWRMvGwUHTTtvBIdo2Vrvuf2zBfwA" rel="nofollow noreferrer" title="GolfScript – Try It Online">Try it online!</a></p>
 <p>explanation:</p>
 <pre><code>])     # Separate the stack and the argument
 ~      # NOT the argument
@@ -41,6 +41,7 @@
 &lt;      # Objects under the index
 @@)&gt;+  # Add the objects above the index
 @@[=]+ # Add the object at the index
+~      # Unpack everything
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1>24 bytes</h1>
