--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240723T190822Z
+"   /golfscore                                      20240723T191138Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/62350.html">Halloween Golf: The 2spooky4me Challenge!       : 0062350</a>
 <a href="q/263496.html">Can you perform swaps?                          : 0263496</a>
 <a href="q/251768.html">Turing Machine that outputs pi                  : 0251768</a>
 <a href="q/90349.html">The Letter A without A                          : 0090349</a>
