--- a/q/274358.html
+++ b/q/274358.html
@@ -26,9 +26,17 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>211</td><td>Elisp</td><td>240723T150252Z</td><td><a href="https://codegolf.stackexchange.com/questions/274358/double-dequer-sort/274359#274359">Samuel J</a></td></tr>
+<tr d-ix="0"><td>079</td><td>JavaScript Node.js</td><td>240723T200514Z</td><td><a href="https://codegolf.stackexchange.com/questions/274358/double-dequer-sort/274367#274367">l4m2</a></td></tr>
+<tr d-ix="1"><td>211</td><td>Elisp</td><td>240723T150252Z</td><td><a href="https://codegolf.stackexchange.com/questions/274358/double-dequer-sort/274359#274359">Samuel J</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Elisp <s>226</s> 211 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 79 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>f=([c,...x],i,...z)=&gt;c?f(x,i,...z,c)|f(x,i,c,...z):i?!z.some(t=&gt;i&gt;(i=t)):f(z,1)
+</code></pre>
+<p><a href="https://tio.run/##VY1NDoIwEIX3ngJ3bTI2lj@VpHAQwoJUasYgNUAMId69Tq0sTNrOzPvem97bVzvpEZ/zYbDXzjmjWK1BCLE0gL6uXJW6Mmz5jaD5O0w64AKr/Som@@jYrEosGaqZ88KwFSR3xo4MI2uielfLBuiBGBJIfZtSE0NQj7AdP5KBSAYS8s2YkZAHc0Y0JSH53tyDsJnWbWmfpY@C3QsysBOR/F84wwX@Iw3Xdphs34ne3hhCZBhy7j4" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>Brute-force</p>
+</div>
+<div id="pu1" class="pu"><h1>Elisp <s>226</s> 211 bytes</h1>
 <p>Edit, learned push and add-to-ordered-list functions</p>
 <pre><code>(defun d(i r)(let((o(list(pop i))))(while(and i o)(let((n(pop i)))(if(&lt;= n(car o))(push n o)(if(&gt;= n(car(last o)))(add-to-ordered-list 'o 'n)(if r(progn(push n o)(if(not i)(setq o(d o nil))))(setq o nil))))))o))
 </code></pre>
