--- a/q/274358.html
+++ b/q/274358.html
@@ -35,6 +35,12 @@
 </code></pre>
 <p><a href="https://tio.run/##VY1NDoIwEIX3ngJ3bTI2lj@VpHAQwoJUasYgNUAMId69Tq0sTNrOzPvem97bVzvpEZ/zYbDXzjmjWK1BCLE0gL6uXJW6Mmz5jaD5O0w64AKr/Som@@jYrEosGaqZ88KwFSR3xo4MI2uielfLBuiBGBJIfZtSE0NQj7AdP5KBSAYS8s2YkZAHc0Y0JSH53tyDsJnWbWmfpY@C3QsysBOR/F84wwX@Iw3Xdphs34ne3hhCZBhy7j4" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Brute-force</p>
+<h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 82 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>f=(x,i=0)=&gt;x.map(g=(c,i)=&gt;c&gt;Math.min(...x)?++g:x[i]=1/0)&amp;&amp;g?i&lt;4:f(x.reverse(),i+1)
+</code></pre>
+<p><a href="https://tio.run/##VY/RjoIwEEXf9yt4MtMwW6kCKrH6BfsFhAfCtjgbpQaI6d/jdBseTNpm5p57Z9K/9tVO3UjP@Xtwv2ZZrAaPpDOhL14@2if0GjokbrvLTzvf5IMGkFJ6cU3TvvI1NVptM7HZ9Fc655UFL0fzMuNkQCClSizWjUCJs0n9VasG@cEd7jEPZc7FDqOa4XpCywYmBSosV2PBQhnNBdOchf3/LQOIk3ncmg5ZXhTtQVCRHZiUn8IRT/gZaUTnhsndjby7Hmr@MTWYWCAhljc" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>Polynomial time</p>
 </div>
 <div id="pu1" class="pu"><h1>Elisp <s>226</s> 211 bytes</h1>
 <p>Edit, learned push and add-to-ordered-list functions</p>
