--- a/q/274358.html
+++ b/q/274358.html
@@ -26,10 +26,42 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>079</td><td>JavaScript Node.js</td><td>240723T200514Z</td><td><a href="https://codegolf.stackexchange.com/questions/274358/double-dequer-sort/274367#274367">l4m2</a></td></tr>
-<tr d-ix="1"><td>211</td><td>Elisp</td><td>240723T150252Z</td><td><a href="https://codegolf.stackexchange.com/questions/274358/double-dequer-sort/274359#274359">Samuel J</a></td></tr>
+<tr d-ix="0"><td>226</td><td>Elisp</td><td>240723T150252Z</td><td><a href="https://codegolf.stackexchange.com/questions/274358/double-dequer-sort/274359#274359">Samuel J</a></td></tr>
+<tr d-ix="1"><td>079</td><td>JavaScript Node.js</td><td>240723T200514Z</td><td><a href="https://codegolf.stackexchange.com/questions/274358/double-dequer-sort/274367#274367">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 79 bytes</h1>
+<div id="pu0" class="pu"><h1>Elisp 226 bytes</h1>
+<pre><code>(defun d(i r)(let((o(list(pop i))))(while(and i o)(let((n(pop i)))(if(&lt;= n(car o))(setq o(cons n o))(if(&gt;= n(car(last o)))(setq o(append o(list n)))(if r(progn(setq o(cons n o))(if(not i)(setq o(d o nil))))(setq o nil))))))o))
+</code></pre>
+<p><a href="https://tio.run/##hVLLboMwELzzFaNIVdeHSCUB0kptv6QXC0xqybFd7KifTxcIKVVNYuEDO48d26tOsg5bo4PvyXfuaNFTo9qzRUManSCjIpEjZkTyzkMLXvT9qY0iaRtouAvJXnHSLb2@wVItO4YFBRW/4Kh2NsCOFWa8XxhkZIhD8cqT3iu2nrrCTo7opoBpM@sit54x1sJqI349518hWJD1UzV2Z7WtZVABj5Th36JcJKvYYY8iiRWM7LCie8L8JXH2ZG2JHNWqd8mMasW/ZH3BjP24q4G5kp8zriYY@vP5UvhcE1k2XWArTbh5g2OqwTVPd2T8wB2ru5xnvOBOur/5GjcOD8nFKwvQSYUgjwqbh/BhN@BJYQJPxVKwONUtheh/AA" rel="nofollow noreferrer">Try it online!</a></p>
+<p>ungolfed:</p>
+<pre><code>(defun double-dequer-sort (input recursive)
+  (let ((output (list (pop input))))
+(while (and input output)
+  (let ((next (pop input)))
+    (if (&lt;= next (car output))
+    (setq output (cons next output))
+      (if (&gt;= next (car (last output)))
+      (setq output (append output (list next)))
+    (if recursive
+        (progn
+          ;; no idea whether to add to end or beginning here
+          (setq output (cons next output))
+          (if (not input)
+          (setq output (double-dequer-sort output nil))
+        )
+          )
+      (setq output nil)
+      )
+    )
+      )
+    )
+  )
+output
+)
+  )
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 79 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=([c,...x],i,...z)=&gt;c?f(x,i,...z,c)|f(x,i,c,...z):i?!z.some(t=&gt;i&gt;(i=t)):f(z,1)
 </code></pre>
@@ -41,39 +73,6 @@
 </code></pre>
 <p><a href="https://tio.run/##VY/RjoIwEEXf9yt4MtMwW6kCKrH6BfsFhAfCtjgbpQaI6d/jdBseTNpm5p57Z9K/9tVO3UjP@Xtwv2ZZrAaPpDOhL14@2if0GjokbrvLTzvf5IMGkFJ6cU3TvvI1NVptM7HZ9Fc655UFL0fzMuNkQCClSizWjUCJs0n9VasG@cEd7jEPZc7FDqOa4XpCywYmBSosV2PBQhnNBdOchf3/LQOIk3ncmg5ZXhTtQVCRHZiUn8IRT/gZaUTnhsndjby7Hmr@MTWYWCAhljc" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Polynomial time</p>
-</div>
-<div id="pu1" class="pu"><h1>Elisp <s>226</s> 211 bytes</h1>
-<p>Edit, learned push and add-to-ordered-list functions</p>
-<pre><code>(defun d(i r)(let((o(list(pop i))))(while(and i o)(let((n(pop i)))(if(&lt;= n(car o))(push n o)(if(&gt;= n(car(last o)))(add-to-ordered-list 'o 'n)(if r(progn(push n o)(if(not i)(setq o(d o nil))))(setq o nil))))))o))
-</code></pre>
-<p><a href="https://tio.run/##hVLLboMwELzzFaNIVdeHSCUB0kptv6QXC0xqybFd7KifTxcIKVVNYuEDO48d26tOsg5bo4PvyXfuaNFTo9qzRUManSCjIpEjZkTyzkMLXvT9qY0iaRtouAvJXnHSLb2@wVItO4YFBRW/4Kh2NsCOFWa8XxhkZIhD8cqT3iu2nrrCTo7opoBpM@sit54x1sJqI349518hWJD1UzV2Z7WtZVABj5Th36JcJKvYYY8iiRWM7LCie8L8JXH2ZG2JHNWqd8mMasW/ZH3BjP24q4G5kp8zriYY@vP5UvhcE1k2XWArTbh5g2OqwTVPd2T8wB2ru5xnvOBOur/5GjcOD8nFKwvQSYUgjwqbh/BhN@BJYQJPxVKwONUtheh/AA" rel="nofollow noreferrer">Try it online!</a></p>
-<p>ungolfed:</p>
-<pre><code>(defun double-dequer-sort (input recursive)
-  (let ((output (list (pop input))))
-    (while (and input output)
-      (let ((next (pop input)))
-        (if (&lt;= next (car output))
-            (push next output)
-          (if (&gt;= next (car (last output)))
-              (add-to-ordered-list 'output 'next)
-            (if recursive
-                (progn
-                  ;; no idea whether to add to end or beginning here
-                  (push next output)
-                  (if (not input)
-                      (setq output (double-dequer-sort output nil))
-                    )
-                  )
-              (setq output nil)
-              )
-            )
-          )
-        )
-      )
-    output
-    )
-  )
-</code></pre>
 </div>
 
 <table id="st">
