--- a/q/274350.html
+++ b/q/274350.html
@@ -26,10 +26,17 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>022</td><td>22 bytes</td><td>240723T163728Z</td><td><a href="https://codegolf.stackexchange.com/questions/274350/golfscript-whole-stack-rotation/274362#274362">Styleurc</a></td></tr>
-<tr d-ix="1"><td>024</td><td>24 bytes</td><td>240723T153830Z</td><td><a href="https://codegolf.stackexchange.com/questions/274350/golfscript-whole-stack-rotation/274361#274361">ovs</a></td></tr>
+<tr d-ix="0"><td>016</td><td>16 bytes</td><td>240723T213211Z</td><td><a href="https://codegolf.stackexchange.com/questions/274350/golfscript-whole-stack-rotation/274372#274372">noodle p</a></td></tr>
+<tr d-ix="1"><td>022</td><td>22 bytes</td><td>240723T163728Z</td><td><a href="https://codegolf.stackexchange.com/questions/274350/golfscript-whole-stack-rotation/274362#274362">Styleurc</a></td></tr>
+<tr d-ix="2"><td>024</td><td>24 bytes</td><td>240723T153830Z</td><td><a href="https://codegolf.stackexchange.com/questions/274350/golfscript-whole-stack-rotation/274361#274361">ovs</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>22 bytes</h1>
+<div id="pu0" class="pu"><h1>16 bytes</h1>
+<pre><code>~]:a)&lt;a)&gt;(:x;+~x
+</code></pre>
+<p><a href="https://tio.run/##S8/PSStOLsosKPlvraCUmJSckpqmZKhfp2CioKCskJlXUFpS/L8u1ipR0yZR007DqsJau67if2zCfwA" rel="nofollow noreferrer" title="GolfScript – Try It Online">Try it online!</a></p>
+<p>Based on ovs's solution</p>
+</div>
+<div id="pu1" class="pu"><h1>22 bytes</h1>
 <p>I made it shorter</p>
 <pre><code>])~{1$}4*&lt;@@)&gt;+@@[=]+~
 </code></pre>
@@ -44,7 +51,7 @@
 ~      # Unpack everything
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1>24 bytes</h1>
+<div id="pu2" class="pu"><h1>24 bytes</h1>
 <p>there is still plenty of room to golf this further, but I think this version shows the idea well.</p>
 <pre><code>:k;]:s;s k~&lt;s k~&gt;(:x;+~x
 </code></pre>
